rung-1: annotate union hit-list with per-case verdicts (2 FIXED, categories for the rest)
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>